# Chatenium-On-Linux-Adwaita

./: .buildconfig  .gitignore  .gitmodules  README.md  hu.chatenium.chtnoladw.json  hu.chatenium.chtnoladw.json~  meson.build
data/: hu.chatenium.chtnoladw.desktop.in  hu.chatenium.chtnoladw.gschema.xml  hu.chatenium.chtnoladw.metainfo.xml.in  hu.chatenium.chtnoladw.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en_US.mo  en_US.po  hu.mo  hu.po  messages.pot
src/: chateniumadw.gresource.xml  chateniumadw.in  main.py  meson.build
src/views/: async_image.py  window.blp  window.py
src/views/chat/: chat.blp  chat.py  chat_row.blp  chat_row.py
src/views/chat/dm/: dm.blp  dm.css  dm.py
src/views/chat/elements/message/: message.blp  message.css  message.py
src/views/login/: login.blp  login.css  login.py
subprojects/: blueprint-compiler.wrap
